fix so keyboard navigation works in overflow

--- a/src/sql/base/browser/ui/taskbar/media/taskbar.css
+++ b/src/sql/base/browser/ui/taskbar/media/taskbar.css
@@ -96,7 +96,7 @@
 	display:none;
 	z-index: 3;
 	padding-left: 0;
-	margin-top: 0;
+	margin-top: -5px;
 	margin-right: 5px;
 	box-shadow: 1px 1px 1px 1px rgba(0,0,0,.25);
 	background-color: white;
